--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.project_template_flutter">
    <application
-        android:label="project_template_flutter"
+        android:label="Training Excercise"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
