--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
+  flutter_map: ^3.1.0
+  latlong2: ^0.8.1
+  http: ^0.13.5
+  webview_flutter: ^4.0.4
 
 dev_dependencies:
   flutter_test:
