--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   latlong2: ^0.8.1
   http: ^0.13.5
   webview_flutter: ^4.0.4
+  flutter_map_marker_popup: ^4.0.0
 
 dev_dependencies:
   flutter_test:
